# scaler-qt

./: CMakeLists.txt
scaler-cpp/main/: main_window.hpp
test/main/: main.cpp
